# relay-cli

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  auth.py  chat.py  main.py  profile.py  rooms.py  session.py  supabase_client.py
commands/: UsableCommands.md
documents/: FEATURES.md  HOW_IT_WORKS.md  INSTRUCTION_MANUAL.md
errors/: CONDAENVERROR.md  RELAYROOMSERROR.md
